--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,63 @@
-.container {
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	font-family: 'Montserrat', sans-serif;
+	background: #e0e0e0;
+	color: #1d1d1d;
+}
+
+.contenedor {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    text-align: center;
+	
 }
 
-.card {
-    width: 15px;
-    height: 300px; 
+.card { 
     border: 2px solid black;
     border-radius: 15%;
     display: flex;
     flex-direction: column;
-    margin: 10px
+    margin-right: 40px;
+    margin-bottom: 20px;
+    text-align: center;
     
+}
+
+.paginacion {
+	position: fixed;
+	bottom: 0;
+	background: #100a1f;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	padding: 10px;
+}
+
+.paginacion button {
+	cursor: pointer;
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 50px;
+	width: 200px;
+	background: #241744;
+	color: #fff;
+	border-radius: 100px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	transition: .3s ease all;
+}
+
+.paginacion button:hover {
+	background: #137c32;
 }
