--- a/styles.css
+++ b/styles.css
@@ -29,43 +29,20 @@ body {
 
 .card { 
     border: 2px solid black;
-    border-radius: 15%;
+    border-radius: 20%;
     display: flex;
     flex-direction: column;
     margin-right: 40px;
     margin-bottom: 20px;
+    text-align: center;    
+}
+
+.contenido-carrito {
+	display: flex;
+    flex-wrap: wrap;
+    color: red;
+    align-items: start;
+    justify-content: center;
     text-align: center;
-    
-}
-
-.paginacion {
-	position: fixed;
-	bottom: 0;
-	background: #100a1f;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	gap: 20px;
-	padding: 10px;
-}
-
-.paginacion button {
-	cursor: pointer;
-	border: none;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	height: 50px;
-	width: 200px;
-	background: #241744;
-	color: #fff;
-	border-radius: 100px;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 600;
-	transition: .3s ease all;
-}
-
-.paginacion button:hover {
-	background: #137c32;
+	padding: 50px;
 }
